--- a/SCVP/registroDeEmpresa/templates/registrarNombreEmpresa.html
+++ b/SCVP/registroDeEmpresa/templates/registrarNombreEmpresa.html
@@ -12,8 +12,8 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
+       <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <body class="bg-primary">
         <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
@@ -28,13 +28,13 @@
                                             <i class="icon-users" data-feather="users"></i>
                                             <i class="icon-plus fas fa-plus"></i>
                                         </div>
-                                        <div class="h3 text-primary mb-0">Create an Organization</div>
+                                        <div class="h3 text-primary mb-0">Nombre de la empresa</div>
                                     </div>
                                     <hr class="m-0" />
                                     <div class="card-body p-5">
                                         <form>
-                                            <div class="mb-3"><input class="form-control form-control-solid" type="text" placeholder="Enter new organization name" aria-label="Organization Name" aria-describedby="orgNameExample" /></div>
-                                            <div class="d-grid"><a class="btn btn-primary" href="multi-tenant-add-users.html">Create organization</a></div>
+                                            <div class="mb-3"><input class="form-control form-control-solid" type="text" placeholder="Introduce el nombre de la nueva empresa" aria-label="Organization Name" aria-describedby="orgNameExample" /></div>
+                                            <div class="d-grid"><a class="btn btn-primary" href="registroDatosEmpresa.html">Registar Empresa</a></div>
                                         </form>
                                     </div>
                                 </div>
@@ -47,7 +47,7 @@
                 <footer class="footer-admin mt-auto footer-dark">
                     <div class="container-xl px-4">
                         <div class="row">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; Your Website 2024</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
