--- a/SCVP/inicioDeSesion/templates/logueo.html
+++ b/SCVP/inicioDeSesion/templates/logueo.html
@@ -30,8 +30,8 @@
                                         <form>
                                             <!-- Form Group (email address)-->
                                             <div class="mb-3">
-                                                <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                                <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter email address" />
+                                                <label class="small mb-1" for="numeroDeEmpleado">Numero de empleado</label>
+                                                <input class="form-control" id="numeroDeEmpleado" type="text" placeholder="Introduce " />
                                             </div>
                                             <!-- Form Group (password)-->
                                             <div class="mb-3">
