Instale en el entorno virtual psycopg2-binary==2.8.6

--- a/SCVP/inicioDeSesion/templates/logueo.html
+++ b/SCVP/inicioDeSesion/templates/logueo.html
@@ -31,12 +31,12 @@
                                             <!-- Form Group (email address)-->
                                             <div class="mb-3">
                                                 <label class="small mb-1" for="numeroDeEmpleado">Numero de empleado</label>
-                                                <input class="form-control" id="numeroDeEmpleado" type="text" placeholder="Introduce " />
+                                                <input class="form-control" id="numeroDeEmpleado" type="text" placeholder="Introduce tu número de empleado" />
                                             </div>
                                             <!-- Form Group (password)-->
                                             <div class="mb-3">
-                                                <label class="small mb-1" for="inputPassword">Password</label>
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Enter password" />
+                                                <label class="small mb-1" for="inputPassword">Contraseña</label>
+                                                <input class="form-control" id="inputPassword" type="password" placeholder="Introduce tu contraseña" />
                                             </div>
                                             <!-- Form Group (remember password checkbox)-->
                                             <div class="mb-3">
