--- a/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
+++ b/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
@@ -26,7 +26,7 @@
                                     <div class="card-body px-5 pt-5 d-flex flex-column">
                                         <div>
                                             <div class="h3 text-primary">Registrar una nueva empresa</div>
-                                            <p class="text-muted mb-4">Registre una empresa y guarde sus datos correspondientes</p>
+                                            <p class="text-muted mb-4">Registre una empresa y guarde los datos correspondientes</p>
                                         </div>
                                         <div class="icons-org-create align-items-center mx-auto mt-auto">
                                             <i class="icon-users" data-feather="users"></i>
@@ -34,12 +34,12 @@
                                         </div>
                                     </div>
                                     <div class="card-footer bg-transparent px-5 py-4">
-                                        <div class="small text-center"><a class="btn btn-block btn-primary" href="registrarNombreEmpresa.html">Registrar  nueva empresa</a></div>
+                                        <div class="small text-center"><a class="btn btn-block btn-primary" href="registroNombreEmpresa.html">Registrar  nueva empresa</a></div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- Join Organization-->
-                            <div class="col-xl-5 col-lg-6 col-md-8 col-sm-11 mt-4">
+                            <!-- Join Organization
+                            <div-- class="col-xl-5 col-lg-6 col-md-8 col-sm-11 mt-4">
                                 <div class="card text-center h-100">
                                     <div class="card-body px-5 pt-5 d-flex flex-column align-items-between">
                                         <div>
@@ -56,7 +56,7 @@
                                         <div class="small text-center"><a class="btn btn-block btn-secondary" href="multi-tenant-join.html">Crear grupo</a></div>
                                     </div>
                                 </div>
-                            </div>
+                            </div-->
                         </div>
                     </div>
                 </main>
