--- a/SCVP/inicioSCVP/templates/inicio.html
+++ b/SCVP/inicioSCVP/templates/inicio.html
@@ -18,7 +18,7 @@
     <body class="nav-fixed">
         <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
             <!-- Sidenav Toggle Button-->
-            <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="#">Sistema de Control de Variables de Proceso</a>
+            <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="">Sistema de Control de Variables de Proceso</a>
         </nav>
 
             <div id="layoutSidenav_content">
@@ -47,7 +47,7 @@
                                             <div class="col-xl-8 col-xxl-12">
                                                 <div class="text-center text-xl-start text-xxl-center mb-4 mb-xl-0 mb-xxl-4">
                                                     <h1 class="text-primary">Bienvenid@ al SCVP</h1>
-                                                    <p class="text-gray-700 mb-0">Browse our fully designed UI toolkit! Browse our prebuilt app pages, components, and utilites, and be sure to look at our full documentation!</p>
+                                                    <p class="text-gray-700 mb-0"></p>
                                                 </div>
                                             </div>
                                             <div class="col-xl-4 col-xxl-12 text-center"><img class="img-fluid" style="max-width: 26rem"  src= {% static "assets/img/illustrations/at-work.svg" %} /></div>
