Se elimino archivo registroNombreEmpresa.html de modulo registroDeEmpresa

--- a/SCVP/inicioSCVP/templates/inicio.html
+++ b/SCVP/inicioSCVP/templates/inicio.html
@@ -51,6 +51,8 @@
                                                 </div>
                                             </div>
                                             <div class="col-xl-4 col-xxl-12 text-center"><img class="img-fluid" style="max-width: 26rem"  src= {% static "assets/img/illustrations/at-work.svg" %} /></div>
+                                            <p></p>
+                                            <div class="col-xl-2 col-xxl-12 text-center"><a href="{% url 'inicioDeSesion' %}" class="btn btn-primary" type="button">Iniciar Sesion</a></div>
                                         </div>
                                     </div>
                                 </div>
