--- a/SCVP/registroDeEmpresa/templates/registroDatosEmpresa.html
+++ b/SCVP/registroDeEmpresa/templates/registroDatosEmpresa.html
@@ -8,7 +8,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Add Users - SB Admin Pro</title>
-        <link href="css/styles.css" rel="stylesheet" />
+        <link  rel="stylesheet" href={% static "css/styles.css"%} />
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
@@ -33,10 +33,15 @@
                                     <hr class="m-0" />
                                     <div class="card-body p-5">
                                         <form>
-                                             <div class="mb-0 text-center">
-                                                Logotipo de la empresa
+                                            <div class="mb-0 text-center">
+                                                Nombre de la empresa
                                             </div>
-
+                                                <p></p>
+                                            <div class="mb-3"><input class="form-control form-control-solid" type="text" placeholder="Introduce el nombre de la empresa" aria-label="Organization Name" aria-describedby="orgNameExample" /></div>
+                                             <div class="mb-0 text-center">
+                                                Logotipo
+                                            </div>
+                                            <p></p>
                                             <div class="mb-3"><input class="form-control form-control-solid" type="file" placeholder="name@example.com" aria-label="Add User" aria-describedby="addUser" accept="image/png, image/jpeg"/></div>
                                             <p>
                                             <div class="mb-0 text-center">
@@ -61,18 +66,8 @@
                                                     Add another
                                                 </button-->
                                             </div>
-                                            <div class="d-grid mb-3"><a class="btn btn-primary" href="auth-login-social.html">Registrar empresa</a></div>
+                                            <div class="d-grid mb-3"><a class="btn btn-primary" href="auth-login-social.html">Registrar</a></div>
 
-                                           <!-- <div class="mb-3 mb-5">
-                                                <a class="d-flex align-items-center" href="#">
-                                                    <i class="me-1" data-feather="link"></i>
-                                                    Get an invite link to share
-                                                </a>
-                                            </div>
-                                            <div class="mb-0 text-center">
-                                                Or,
-                                                <a href="auth-login-social.html">skip for now</a>
-                                            </div-->
                                         </form>
                                     </div>
                                 </div>
@@ -97,6 +92,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src={% static "js/scripts.js" %}></script>
     </body>
 </html>
