--- a/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
+++ b/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
@@ -8,8 +8,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Create or Join Organization - SB Admin Pro</title>
-        <link href="css/styles.css" rel="stylesheet" />
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+        <link rel="stylesheet" href={% static "css/styles.css" %}  />
+        <link rel="icon" type="image/x-icon" href={% static "assets/img/favicon.png"%} />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
@@ -34,29 +34,10 @@
                                         </div>
                                     </div>
                                     <div class="card-footer bg-transparent px-5 py-4">
-                                        <div class="small text-center"><a class="btn btn-block btn-primary" href="registroNombreEmpresa.html">Registrar  nueva empresa</a></div>
+                                        <div class="small text-center"><a class="btn btn-block btn-primary" href="registroNombreEmpresa">Registrar  nueva empresa</a></div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- Join Organization
-                            <div-- class="col-xl-5 col-lg-6 col-md-8 col-sm-11 mt-4">
-                                <div class="card text-center h-100">
-                                    <div class="card-body px-5 pt-5 d-flex flex-column align-items-between">
-                                        <div>
-                                            <div class="h3 text-secondary">Crear grupos</div>
-                                            <p class="text-muted mb-4">Añada nuevos grupos de procesos, linea o área y sus integrantes</p>
-                                        </div>
-                                        <div class="icons-org-join align-items-center mx-auto">
-                                            <i class="icon-user" data-feather="user"></i>
-                                            <i class="icon-arrow fas fa-long-arrow-alt-right"></i>
-                                            <i class="icon-users" data-feather="users"></i>
-                                        </div>
-                                    </div>
-                                    <div class="card-footer bg-transparent px-5 py-4">
-                                        <div class="small text-center"><a class="btn btn-block btn-secondary" href="multi-tenant-join.html">Crear grupo</a></div>
-                                    </div>
-                                </div>
-                            </div-->
                         </div>
                     </div>
                 </main>
@@ -65,7 +46,7 @@
                 <footer class="footer-admin mt-auto footer-dark">
                     <div class="container-xl px-4">
                         <div class="row">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; SCVP 2024</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
@@ -77,6 +58,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src={%  static "js/scripts.js" %}></script>
     </body>
 </html>
