--- a/SCVP/inicioSCVP/templates/inicio.html
+++ b/SCVP/inicioSCVP/templates/inicio.html
@@ -18,7 +18,7 @@
     <body class="nav-fixed">
         <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
             <!-- Sidenav Toggle Button-->
-            <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="">Sistema de Control de Variables de Proceso</a>
+            <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="#!">Sistema de Control de Variables de Proceso</a>
         </nav>
 
             <div id="layoutSidenav_content">
