--- a/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
+++ b/SCVP/registroDeEmpresa/templates/registroDeEmpresa.html
@@ -34,7 +34,7 @@
                                         </div>
                                     </div>
                                     <div class="card-footer bg-transparent px-5 py-4">
-                                        <div class="small text-center"><a class="btn btn-block btn-primary" href="registroNombreEmpresa">Registrar  nueva empresa</a></div>
+                                        <div class="small text-center"><a class="btn btn-block btn-primary" href={% url "registroDatosEmpresa" %}>Registrar nueva empresa</a></div>
                                     </div>
                                 </div>
                             </div>
