Elimine la carpeta  creacionDeUsuariosYGrupos y la retire del settings.py de SCVP/ añadi los templates agregarGrupo, creacionDeGrupo y registroUsuario en el inicioSCVP y modifique sus confirguracones en  vistas y  urls

--- a/SCVP/inicioSCVP/templates/creacionDeGrupo.html
+++ b/SCVP/inicioSCVP/templates/creacionDeGrupo.html
@@ -43,7 +43,7 @@
                                 <div class="card text-center h-100">
                                     <div class="card-body px-5 pt-5 d-flex flex-column align-items-between">
                                         <div>
-                                            <div class="h3 text-secondary">Crear grupos</div>
+                                            <div class="h3 text-secondary">Crear grupo</div>
                                             <p class="text-muted mb-4">Añada nuevos grupos de procesos, linea o área y sus integrantes</p>
                                         </div>
                                         <div class="icons-org-join align-items-center mx-auto">
