--- a/SCVP/inicioSCVP/templates/agregarGrupo.html
+++ b/SCVP/inicioSCVP/templates/agregarGrupo.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Join Organization - SB Admin Pro</title>
-        <link href="css/styles.css" rel="stylesheet" />
+        <title>Agregar grupo</title>
+        <link rel="stylesheet" href={% static "css/styles.css"%}/>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
@@ -27,14 +28,14 @@
                                             <i class="icon-arrow fas fa-long-arrow-alt-right"></i>
                                             <i class="icon-users" data-feather="users"></i>
                                         </div>
-                                        <div class="h3 text-secondary mb-0">Join an Organization</div>
+                                        <div class="h3 text-secondary mb-0">Agregar grupo a la empresa</div>
                                     </div>
                                     <hr class="m-0" />
                                     <div class="card-body p-5">
                                         <form>
-                                            <h5 class="mb-3">Have an access code?</h5>
-                                            <div class="mb-3"><input class="form-control form-control-solid" type="text" placeholder="Enter access code" aria-label="Access Code" aria-describedby="accessCodeExample" /></div>
-                                            <div class="d-grid"><a class="btn btn-secondary" href="auth-login-social.html">Join</a></div>
+                                            <h5 class="mb-3">Nombre del grupo</h5>
+                                            <div class="mb-3"><input class="form-control form-control-solid" type="text" placeholder="Introduce el nombre del grupo" aria-label="Access Code" aria-describedby="accessCodeExample" /></div>
+                                            <div class="d-grid"><a class="btn btn-secondary" href="#!">Agregar grupo</a></div>
                                         </form>
                                     </div>
                                     <div class="org-or-divider"><div class="org-or">or</div></div>
@@ -67,6 +68,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src={% static "js/scripts.js" %}></script>
     </body>
 </html>
