--- a/SCVP/inicioSCVP/templates/registroUsuario.html
+++ b/SCVP/inicioSCVP/templates/registroUsuario.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Register - SB Admin Pro</title>
-        <link href="css/styles.css" rel="stylesheet" />
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+        <title>Registro SCVP </title>
+        <link rel="stylesheet"  href={% static "css/styles.css" %}/>
+        <link rel="icon" type="image/x-icon" href={% static "assets/img/favicon.png" %}/>
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
@@ -23,55 +23,58 @@
                             <div class="col-lg-7">
                                 <!-- Basic registration form-->
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro</h3></div>
+                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro de usuario</h3></div>
                                     <div class="card-body">
                                         <!-- Registration form-->
                                         <form>
                                             <!-- Form Row-->
                                             <div class="row gx-3">
-                                                <div class="col-md-6">
+                                                <div class="mb-3">
                                                     <!-- Form Group (first name)-->
                                                     <div class="mb-3">
-                                                        <label class="small mb-1" for="inputFirstName">First Name</label>
-                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Enter first name" />
+                                                        <label class="small mb-1" for="inputFirstName">Nombre completo </label>
+                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Introduce el Nombre completo " />
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6">
-                                                    <!-- Form Group (last name)-->
+                                            </div>
+
+                                              <div class="row gx-3">
+                                                <div class="mb-3">
+                                                    <!-- Numero de empleado-->
                                                     <div class="mb-3">
-                                                        <label class="small mb-1" for="inputLastName">Last Name</label>
-                                                        <input class="form-control" id="inputLastName" type="text" placeholder="Enter last name" />
+                                                        <label class="small mb-1" for="inputFirstName">Numero de empleado </label>
+                                                        <input class="form-control" id="inputFirstName" type="number" maxlength="10"   placeholder="Introduce el numero de empleado " />
                                                     </div>
                                                 </div>
                                             </div>
                                             <!-- Form Group (email address)            -->
                                             <div class="mb-3">
-                                                <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                                <input class="form-control" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" />
+                                                <label class="small mb-1" for="inputEmailAddress">Correo de la empresa</label>
+                                                <input class="form-control" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Introduce el correo corporativo" />
                                             </div>
                                             <!-- Form Row    -->
-                                            <div class="row gx-3">
+                                            <div-- class="row gx-3">
                                                 <div class="col-md-6">
-                                                    <!-- Form Group (password)-->
+                                                    <!-- Form Group (password)>
                                                     <div class="mb-3">
                                                         <label class="small mb-1" for="inputPassword">Password</label>
                                                         <input class="form-control" id="inputPassword" type="password" placeholder="Enter password" />
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <!-- Form Group (confirm password)-->
+                                                    <-- Form Group (confirm password)->
                                                     <div class="mb-3">
                                                         <label class="small mb-1" for="inputConfirmPassword">Confirm Password</label>
                                                         <input class="form-control" id="inputConfirmPassword" type="password" placeholder="Confirm password" />
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div-->
                                             <!-- Form Group (create account submit)-->
-                                            <a class="btn btn-primary btn-block" href="auth-login-basic.html">Create Account</a>
+                                                        <a class="btn btn-primary center btn-block" href="#!">Registrar usuario</a>
                                         </form>
                                     </div>
+                                    <p></p>
                                     <div class="card-footer text-center">
-                                        <div class="small"><a href="auth-login-basic.html">Have an account? Go to login</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -95,6 +98,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src={% static "js/scripts.js" %}></script>
     </body>
 </html>
