--- a/SCVP/inicioDeSesion/templates/logueo.html
+++ b/SCVP/inicioDeSesion/templates/logueo.html
@@ -31,29 +31,28 @@
                                             <!-- Form Group (email address)-->
                                             <div class="mb-3">
                                                 <label class="small mb-1" for="numeroDeEmpleado">Numero de empleado</label>
-                                                <input class="form-control" id="numeroDeEmpleado" type="text" placeholder="Introduce tu número de empleado" />
+                                                <input class="form-control" id="numeroDeEmpleado" type="text" required min="1" max="8" pattern="[a-zA-Z][a-zA-Z0-9\s]*" placeholder="Introduce tu número de empleado" />
                                             </div>
                                             <!-- Form Group (password)-->
                                             <div class="mb-3">
                                                 <label class="small mb-1" for="inputPassword">Contraseña</label>
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Introduce tu contraseña" />
+                                                <input class="form-control" id="inputPassword" required min="8" max="8" type="password" placeholder="Introduce tu contraseña" />
                                             </div>
                                             <!-- Form Group (remember password checkbox)-->
                                             <div class="mb-3">
                                                 <div class="form-check">
                                                     <input class="form-check-input" id="rememberPasswordCheck" type="checkbox" value="" />
-                                                    <label class="form-check-label" for="rememberPasswordCheck">Remember password</label>
+                                                    <label class="form-check-label" for="rememberPasswordCheck">Recordar contraseña</label>
                                                 </div>
                                             </div>
                                             <!-- Form Group (login box)-->
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="auth-password-basic.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="dashboard-1.html">Login</a>
+                                                <a class="small" href="#!">Olvidaste tu contraseña?</a>
+                                                <input  type="submit" class="button_active btn-primary" href="#!"></input>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
-                                        <div class="small"><a href="auth-register-basic.html">Need an account? Sign up!</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +64,7 @@
                 <footer class="footer-admin mt-auto footer-dark">
                     <div class="container-xl px-4">
                         <div class="row">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; SCVP 2024</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
