--- a/SCVP/inicioDeSesion/templates/registro.html
+++ b/SCVP/inicioDeSesion/templates/registro.html
@@ -32,21 +32,21 @@
                                                 <div class="col-md-6">
                                                     <!-- Form Group (first name)-->
                                                     <div class="mb-3">
-                                                        <label class="small mb-1" for="inputFirstName">First Name</label>
-                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Enter first name" />
+                                                        <label class="small mb-1" for="introduceNombe"> Nombre</label>
+                                                        <input class="form-control" id="introduceNombre" type="text" placeholder="Introduce un Nombre" />
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <!-- Form Group (last name)-->
                                                     <div class="mb-3">
-                                                        <label class="small mb-1" for="inputLastName">Last Name</label>
-                                                        <input class="form-control" id="inputLastName" type="text" placeholder="Enter last name" />
+                                                        <label class="small mb-1" for="introduceApellido">Apellido</label>
+                                                        <input class="form-control" id="introuceApellido" type="text" placeholder="Introduce apellido" />
                                                     </div>
                                                 </div>
                                             </div>
                                             <!-- Form Group (email address)            -->
                                             <div class="mb-3">
-                                                <label class="small mb-1" for="inputEmailAddress">Email</label>
+                                                <label class="small mb-1" for="inputEmailAddress">Correo</label>
                                                 <input class="form-control" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" />
                                             </div>
                                             <!-- Form Row    -->
