--- a/SCVP2/usuarios/static/css/styles.css
+++ b/SCVP2/usuarios/static/css/styles.css
@@ -15139,8 +15139,8 @@ body {
 }
 
 .bg-gradient-primary-to-secondary {
-  background-color: #0061f2 !important;
-  background-image: linear-gradient(135deg, #0061f2 0%, rgba(105, 0, 199, 0.8) 100%) !important;
+  background-color: #814e08 !important;
+  background-image: linear-gradient(135deg, #bd8338 0%, rgb(129, 78, 8) 100%) !important;
 }
 
 .bg-transparent-light {
