--- a/SCVP2/usuarios/templates/registro_de_usuario.html
+++ b/SCVP2/usuarios/templates/registro_de_usuario.html
@@ -40,7 +40,7 @@
                                             <!-- Form Group (email) -->
                                             <div class="mb-3">
                                                 <label class="small mb-1" for="email">Correo electrónico:</label>
-                                                <input class="form-control" type="email" id="email" name="email" required>
+                                                <input class="form-control" type="email" id="email" name="email" required placeholder="Introduce un correo electronico">
                                             </div>
 
                                             <!-- Form Group (numero_empleado) -->
