--- a/SCVP2/operadores/templates/estadisticos.html
+++ b/SCVP2/operadores/templates/estadisticos.html
@@ -551,7 +551,7 @@
 
 <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- uPlot -->
-<script src="{%  static "plugins/uplot/uPlot.iife.min.js"%}"></script>
+<script src="{%  static 'plugins/uplot/uPlot.iife.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'js/adminlte.min.js'%}"></script>
 
@@ -566,7 +566,7 @@
 <script src={% static  "plugins/jszip/jszip.min.js"%}></script>
 <script src={% static "plugins/pdfmake/pdfmake.min.js"%}></script>
 <script src={% static "plugins/pdfmake/vfs_fonts.js"%}></script>
-<script src={%static "plugins/datatables-buttons/js/buttons.html5.min.js"%}></script>
+<script src={% static "plugins/datatables-buttons/js/buttons.html5.min.js"%}></script>
 <script src={% static "plugins/datatables-buttons/js/buttons.print.min.js"%}></script>
 <script src={% static "plugins/datatables-buttons/js/buttons.colVis.min.js"%}></script>
 <!-- AdminLTE App -->
