--- a/SCVP2/ingreso/templates/ingreso_admin.html
+++ b/SCVP2/ingreso/templates/ingreso_admin.html
@@ -15,9 +15,7 @@
     <div class="row full-height justify-content-center">
       <div class="col-12 text-center align-self-center py-5">
         <div class="section pb-5 pt-5 pt-sm-2 text-center">
-          <h6 class="mb-0 pb-3"><span>Operador </span><span>Lider</span></h6>
-                <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
-                <label for="reg-log"></label>
+          <h6 class="mb-0 pb-3"><span>Administrador </span>
           <div class="card-3d-wrap mx-auto">
             <div class="card-3d-wrapper">
               <div class="card-front">
@@ -32,31 +30,11 @@
                       <input type="password" class="form-style" placeholder="Contraseña">
                       <i class="input-icon uil uil-lock-alt"></i>
                     </div>
-                    <a href={% url 'modulo_operador' %} class="btn mt-4">Ingresar</a>
+                    <a href={% url 'modulo_administrador' %} class="btn mt-4">Ingresar</a>
                     <p class="mb-0 mt-4 text-center"><a href="#" class="link">¿Olvidaste tu contraseña?</a></p>
                       </div>
                     </div>
                   </div>
-              <div class="card-back">
-                <div class="center-wrap">
-                  <div class="section text-center">
-                    <h4 class="mb-3 pb-3">Ingreso</h4>
-                    <div class="form-group">
-                        <div class="form-group">
-                            <input type="number" class="form-style" placeholder="Numero de Empleado">
-                            <i class="input-icon uil uil-asterisk"></i>
-                          </div>	
-                          <div class="form-group mt-2">
-                            <input type="password" class="form-style" placeholder="Contraseña">
-                            <i class="input-icon uil uil-lock-alt"></i>
-                          </div>
-                    </div>
-                    <a href={% url 'modulo_lider' %} class="btn mt-4">Ingresar</a>
-                    <p class="mb-0 mt-4 text-center"><a href="" class="link">¿Olvidaste tu contraseña?</a></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
