--- a/SCVP2/administrador/templates/modulo_administrador.html
+++ b/SCVP2/administrador/templates/modulo_administrador.html
@@ -33,24 +33,8 @@
                         </div>
                     </header>
 <div class="container-xl px-4 mt-4">
-    <div class="row">
-        <div class="col-xl-4 mb-4">
-            <!-- Dashboard example card 1-->
-            <a class="card lift h-100" href="{% url 'inicio_de_sesion' %}">
-                <div class="card-body d-flex justify-content-center flex-column">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div class="me-3">
-                            <i class="feather-xl text-primary mb-3" data-feather="package"></i>
-                            <h5>Inicio de sesión</h5>
-                            <div class="text-muted small">Inicio de sesión de los administradores del sistema</div>
-                        </div>
-                        <img src="/static/assets/img/illustrations/browser-stats.svg" alt="..." style="width: 8rem" />
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-4 mb-4">
+    <div class="row" style="align-content: center">
+        <div class="col-xl-4 mb-4" >
             <!-- Dashboard example card 3-->
             <a class="card lift h-100" href="{%  url 'registro_de_empresa' %}">
                 <div class="card-body d-flex justify-content-center flex-column">
@@ -73,8 +57,23 @@
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
                             <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
-                            <h5>Registro de líderes</h5>
+                            <h5>Registro de líderes de empresa</h5>
                             <div class="text-muted small">El administrador del sistema creará las cuentas de los líderes de producción</div>
+                        </div>
+                        <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
+                    </div>
+                </div>
+            </a>
+        </div>
+         <div class="col-xl-4 mb-4">
+            <!-- Dashboard example card 2-->
+            <a class="card lift h-100" href="{% url 'registro_de_administrador'%}">
+                <div class="card-body d-flex justify-content-center flex-column">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="me-3">
+                            <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
+                            <h5>Registrar nuevo administrador</h5>
+                            <div class="text-muted small">Registrar un nuevo administrador</div>
                         </div>
                         <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
                     </div>
@@ -83,4 +82,5 @@
         </div>
     </div>
 </div>
+    </html>
 {% endblock %}
