--- a/SCVP2/ingreso/templates/ingreso_administrador.html
+++ b/SCVP2/ingreso/templates/ingreso_administrador.html
@@ -14,7 +14,8 @@
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
-    <div class="container-xl px-4" style="margin-top: 50px;">
+
+    <div class="container-xl px-4" style="margin-top: 25px;">
         <div class="card">
             <div class="card-header" style="text-align: center;">Hola Administrador !!!</div>
             <!--div class="card-body">This compact page header example strips down the page header element to create a seamless, slim page header.</div-->
@@ -23,60 +24,53 @@
     <body class="bg-primary justify-content-center">
             <div class="card-body justify-content-center">
                 <form action="#" method="post">
-                    <div class="mb-3 justify-content-center">
-                        <label for="exampleInputEmail1" class="form-label<body class="bg-primary">
-        <div id="layoutAuthentication">
+                    <div class="form-label m-5 justify-content-center">
+
+        <div id="layoutAuthentication" style="align-content: center">
             <div id="layoutAuthentication_content">
                 <main>
-                    <!-- logueo.html -->
-                    <div class="container-xl px-4" style="align-content: center">
+                  <div class="container-xl px-4">
                         <div class="row justify-content-center">
-
+                            <div class="col-lg-5">
                                 <!-- Basic login form-->
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Ingreso</h3></div>
-                                    <div class="card-body align-content-center">
-                                        <!-- Django Form -->
-                                        <form method="post" action="#!">
-                                            {% csrf_token %}
-                                            <!-- Form Group (numero_Empleado) -->
-                                            <div class="mb-3">
-                                                <label class="small mb-1" for="{{ form.numero_Empleado.id_for_label }}">Numero de empleado</label>
-                                                <input class="form-control" type="text" placeholder="Ingrese su número de empleado" name="{{ form.numero_Empleado.name }}" />
-                                                {{ form.numero_Empleado.errors }}
-                                            </div>
-                                            <!-- Form Group (contrasena_Empleado) -->
-                                            <div class="mb-3">
-                                                <label class="small mb-1"   for="{{ form.contrasena_Empleado.id_for_label }}"  >Contraseña</label>
-                                                <input class="form-control" type="password" placeholder="Ingrese su contraseña" name="{{ form.contrasena_Empleado.name }}" />
-                                                {{ form.contrasena_Empleado.errors }}
-                                            </div>
-
-                                            <!-- Form Group (remember password checkbox) -->
-                                            <div class="mb-3">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" id="rememberPasswordCheck" type="checkbox" name="remember_me" value="1" />
-                                                    <label class="form-check-label" for="rememberPasswordCheck">Recordar contraseña</label>
-                                                </div>
-                                            </div>
-                                            <!-- Form Group (login box) -->
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="#!">Olvidaste tu contraseña?</a>
-                                            </div>
-                                        </form>
-                                        <!-- End Django Form -->
+                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Ingresar</h3></div>
+                                    <div class="card-body">
+                                        <!-- Inicio de sesion formulario-->
+                                  <form method="post" action="{% url 'inicio_sesion' %}">
+                                    {% csrf_token %}
+                                    <div class="mb-3">
+                                        <label class="small mb-1" for="numeroEmpleado">Número de empleado</label>
+                                        <input class="form-control" id="numeroEmpleado" name="numero_empleado" type="text" required placeholder="Introduce tu número de empleado" />
                                     </div>
-                                    <div class="card-footer text-center"></div>
+                                    <div class="mb-3">
+                                        <label class="small mb-1" for="contrasena">Contraseña</label>
+                                        <input class="form-control" id="contrasena" name="contrasena" required type="password" placeholder="Introduce tu contraseña" />
+                                    </div>
+                                    <!-- Form Group (remember password checkbox)-->
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            <input class="form-check-input" id="rememberPasswordCheck" type="checkbox" value="" />
+                                            <label class="form-check-label" for="rememberPasswordCheck">Recordar contraseña</label>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                        <a class="small" href="{% url 'recuperar_contrasena' %}">¿Olvidaste tu contraseña?</a>
+                                        <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
+                                    </div>
+                                </form>
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <div class="small"><a href="#"></a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </main>
             </div>
-            <div id="layoutAuthentication_footer">
+        </div>
+            <div id="layoutAuthentication_footer" style="margin-bottom: 10px">
                 <footer class="footer-admin mt-auto footer-dark">
                     <div class="container-xl px-4">
                         <div class="row">
@@ -92,7 +86,6 @@
             </div>
         </div>
 
-        <!--  { % messages %}  Mostrar mensajes de error de credenciales en el inicio de sesion-->
     </body>
     </div>
 
