--- a/SCVP2/ingreso/static/css/styles.css
+++ b/SCVP2/ingreso/static/css/styles.css
@@ -7,7 +7,7 @@ body{
 	background-color: #ffffff;
   overflow: hidden;
   height: 100vh;
-  background: radial-gradient(circle at center, #ffffff 3%, #78102E 75%);
+  background: radial-gradient(circle at center, #cb3dd8 3%, #4c32be 75%);
 }
 a:hover {
 	text-decoration: none;
